# neomacs

./: README.md  flake.nix  shell.nix
.github/: pull_request_template.md
.github/workflows/: vm-compat.yml
doc/display-engine/: TASKS.md
docs/: elisp-vm-design.md  neovm-rfc-modular-multithread.md  neovm-untracked-elisp-port-inventory.md  ongoing-tasks.md  plan.md  rust-display-engine.md
docs/plans/: 2026-02-03-wpe-webkit-wgpu-design.md  2026-02-04-always-threaded-mode-design.md  2026-02-04-two-thread-architecture-design.md  2026-02-04-two-thread-architecture-impl.md  2026-02-04-winit-text-rendering-design.md
lisp/: frame.el  menu-bar.el  neomacs-video.el  neomacs-webkit.el
lisp/term/: neomacs-win.el
nix/: neomacs.nix
rust/neomacs-display/: Cargo.toml  cbindgen.toml
rust/neomacs-display/include/: neomacs_display.h
rust/neomacs-display/src/: effect_config.rs  ffi.rs  lib.rs  render_thread.rs  thread_comm.rs
rust/neomacs-display/src/backend/gtk4/: hybrid_renderer.rs  image.rs  mod.rs  video.rs  widget.rs
rust/neomacs-display/src/backend/tty/: mod.rs
rust/neomacs-display/src/backend/webkit/: cache.rs
rust/neomacs-display/src/backend/wgpu/: backend.rs  events.rs  glyph_atlas.rs  image_cache.rs  mod.rs  renderer.rs  toolbar_icons.rs  va_dmabuf_export.rs  vertex.rs  video_cache.rs  window_state.rs
rust/neomacs-display/src/backend/wgpu/renderer/: content.rs  cursor_effects.rs  effect_common.rs  effects_state.rs  glyphs.rs  media.rs  mod.rs  overlays.rs  transitions.rs  window_effects.rs
rust/neomacs-display/src/backend/wpe/: backend.rs  view.rs
rust/neomacs-display/src/core/: animation.rs  category.rs  face.rs  frame_glyphs.rs  glyph.rs  itree.rs  marker.rs  mod.rs  scene.rs  syntax_table.rs  types.rs
rust/neomacs-display/src/core/bidi/: tables.rs  types.rs
rust/neomacs-display/src/ffi/: animation.rs  animation_effects.rs  clipboard.rs  image.rs  itree.rs  mod.rs  scene.rs  threaded.rs
rust/neomacs-display/src/layout/: bidi_layout.rs  emacs_ffi.rs  engine.rs  hit_test.rs  status_line.rs  types.rs
rust/neomacs-display/src/render_thread/: child_frames.rs  cursor.rs  input.rs  mod.rs  popup_menu.rs  transitions.rs
rust/neomacs-display/src/text/: engine.rs
rust/neomacs-display/tests/: threaded_test.rs
rust/neovm-core/: Cargo.toml
rust/neovm-core/examples/: compat_runner.rs  precompile_neoc.rs
rust/neovm-core/src/: elisp.rs  encoding.rs  face.rs  hooks.rs  keyboard.rs  lib.rs  window.rs
rust/neovm-core/src/buffer/: buffer.rs  mod.rs  undo.rs
rust/neovm-core/src/elisp/: abbrev.rs  advice.rs  autoload.rs  bookmark.rs  buffer.rs  builtin_registry.rs  builtins.rs  builtins_extra.rs  callproc.rs  casefiddle.rs  casetab.rs  ccl.rs  character.rs  charset.rs  chartable.rs  cl_extra.rs  cl_lib.rs  compiled_literal.rs  composite.rs  custom.rs  data.rs  debug.rs  dired.rs  display.rs  doc.rs  editfns.rs  error.rs  errors.rs  eval.rs  fileio.rs  floatfns.rs  fns.rs  font.rs  format.rs  hashtab.rs  image.rs  indent.rs  interactive.rs  isearch.rs  json.rs  (+34 more)
rust/neovm-core/src/elisp/buffer/: stateful.rs  tests.rs
rust/neovm-core/src/elisp/bytecode/: compiler.rs  opcode.rs  vm.rs
rust/neovm-core/src/elisp/callproc/: args.rs  env.rs  process.rs  tests.rs
rust/neovm-core/src/elisp/character/: builtins.rs  helpers.rs  tests.rs
rust/neovm-core/src/elisp/data/: eval_stateful.rs  helpers.rs  pure.rs  tests.rs
rust/neovm-core/src/elisp/keyboard/: args.rs  eval_stateful.rs  pure.rs  tests.rs
rust/neovm-core/src/elisp/xfaces/: args.rs  builtins.rs  tests.rs
rust/neovm-core/src/gc/: heap.rs  mod.rs  types.rs
src/: comp.c  dispnew.c  eval.c  frame.c  ftcrfont.c  image.c  lisp.h  neomacs_display.h  neomacsfns.c  neomacsterm.c  neomacsterm.h  process.c  xfaces.c
test/manual/: inline-media-test.el  neomacs-face-test.el  (+4 more)
(+444 files in other folders)
