[package]
name = "neomacs-display"
version = "0.1.0"
edition = "2021"
authors = ["Neomacs Contributors"]
license = "GPL-3.0-or-later"
description = "GPU-accelerated display engine for Neomacs"
repository = "https://github.com/eval-exec/neomacs-1"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Text rendering - Pure Rust stack
cosmic-text = "0.12"

# Vulkan for DMA-BUF import (WPE WebKit integration)
ash = "0.38"

# GStreamer for video
gstreamer = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-allocators = { version = "0.23", optional = true }

# Winit + wgpu backend (always enabled)
winit = "0.30"
wgpu = "23"
# wgpu-hal for low-level Vulkan access (DMA-BUF import)
wgpu-hal = { version = "23", features = ["vulkan"] }
raw-window-handle = "0.6"
arboard = "3.4"
bytemuck = { version = "1.18", features = ["derive"] }
pollster = "0.4"

# Image decoding (async)
image = "0.24"

# SVG rendering (pure Rust, no C deps)
resvg = "0.44"

# WPE WebKit - bindings generated via bindgen in build.rs
# No crate dependency - we generate sys bindings directly

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
bitflags = "2.0"
once_cell = "1.19"

# Thread communication
crossbeam-channel = "0.5"
os_pipe = "1.1"

# FFI
libc = "0.2"

# Terminal emulation (neo-term)
alacritty_terminal = { version = "0.25", optional = true }
parking_lot = { version = "0.12", optional = true }

[build-dependencies]
cbindgen = "0.27"
which = "7.0"
bindgen = "0.71"
pkg-config = "0.3"

[features]
# Default: all features enabled
default = ["video", "wpe-webkit", "neo-term"]
# Core backend selection (chosen by configure/Makefile feature flag)
core-backend-emacs-c = []
core-backend-rust = []
tty-backend = []
# Video with GStreamer
video = ["gstreamer", "gstreamer-video", "gstreamer-app", "gstreamer-allocators"]
# WPE WebKit integration
wpe-webkit = []
# GPU-accelerated terminal emulator
neo-term = ["alacritty_terminal", "parking_lot"]

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
