[package]
name = "neovm-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Core runtime structures for NeoVM"

[features]
default = ["core-backend-emacs-c"]
core-backend-emacs-c = []
core-backend-rust = []
legacy-elc-literal = []

[dependencies]
neovm-host-abi = { path = "../neovm-host-abi" }
libc = "0.2"
regex = "1"
sha1 = "0.10"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
